--- a/.github/workflows/app1.yml
+++ b/.github/workflows/app1.yml
@@ -11,24 +11,28 @@ jobs:
       changed_apps: ${{ steps.filter.outputs.changed_apps }}
       has_changes: ${{ steps.filter.outputs.has_changes }}
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Important for git diff to work properly
 
-      - name: Detect Changed App Folders
+      - name: Detect changed app folders
         id: filter
         run: |
-          git fetch origin main
-          changed_files=$(git diff --name-only origin/main...HEAD)
+          echo "🧠 Running git diff HEAD^ HEAD..."
+          git diff --name-only HEAD^ HEAD > diff.txt
+          cat diff.txt
 
-          echo "Changed files:"
-          echo "$changed_files"
+          changed_files=$(cat diff.txt)
 
-          changed_apps=$(echo "$changed_files" | grep '^EKS/app' | cut -d '/' -f2 | sort -u | jq -R -s -c 'split("\n") | map(select(. != ""))')
-
-          # Handle empty or null cases
-          if [ "$changed_apps" = "null" ] || [ -z "$changed_apps" ]; then
+          changed_apps=$(echo "$changed_files" | grep '^EKS/app[0-9]\+/' | cut -d '/' -f2 | sort -u | jq -R -s -c 'split("\n") | map(select(. != ""))')
+          
+          # Safety fallback
+          if [ -z "$changed_apps" ] || [ "$changed_apps" = "null" ]; then
             changed_apps="[]"
           fi
+
+          echo "🔍 Changed apps: $changed_apps"
 
           has_changes="false"
           if [ "$changed_apps" != "[]" ]; then
@@ -47,7 +51,7 @@ jobs:
         app: ${{ fromJson(needs.detect-changes.outputs.changed_apps) }}
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Configure AWS credentials
@@ -60,13 +64,15 @@ jobs:
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build and Tag ${{ matrix.app }}
+      - name: Build and tag image for ${{ matrix.app }}
         run: |
+          echo "🔨 Building app: ${{ matrix.app }}"
           docker build -t ${{ matrix.app }}:${{ github.sha }} ./EKS/${{ matrix.app }}
           docker tag ${{ matrix.app }}:${{ github.sha }} ${{ secrets.ECR_REGISTRY }}/${{ matrix.app }}:latest
           docker tag ${{ matrix.app }}:${{ github.sha }} ${{ secrets.ECR_REGISTRY }}/${{ matrix.app }}:${{ github.sha }}
 
-      - name: Push Image ${{ matrix.app }} to ECR
+      - name: Push image for ${{ matrix.app }}
         run: |
+          echo "📤 Pushing ${{ matrix.app }} to ECR"
           docker push ${{ secrets.ECR_REGISTRY }}/${{ matrix.app }}:latest
           docker push ${{ secrets.ECR_REGISTRY }}/${{ matrix.app }}:${{ github.sha }}
