--- a/.github/workflows/app1.yml
+++ b/.github/workflows/app1.yml
@@ -69,10 +69,10 @@ jobs:
           echo "🔨 Building app: ${{ matrix.app }}"
           docker build -t ${{ matrix.app }}:${{ github.sha }} ./EKS/${{ matrix.app }}
           docker tag ${{ matrix.app }}:${{ github.sha }} ${{ secrets.ECR_REGISTRY }}:latest
-          docker tag ${{ matrix.app }}:${{ github.sha }} ${{ secrets.ECR_REGISTRY }}:${{ github.sha }}
+          docker tag ${{ matrix.app }}:${{ github.sha }} ${{ secrets.ECR_REGISTRY }}:${{matrix.app}}
 
       - name: Push image for ${{ matrix.app }}
         run: |
           echo "📤 Pushing ${{ matrix.app }} to ECR"
           docker push ${{ secrets.ECR_REGISTRY }}:latest
-          docker push ${{ secrets.ECR_REGISTRY }}:${{ github.sha }}
+          docker push ${{ secrets.ECR_REGISTRY }}:${{matrix.app}}
